8201447: C1 does backedge profiling incorrectly

Increment backedge counter only for backward arms of conditional branches.

Reviewed-by: never, kvn